--- a/Homework 1/13/index.html
+++ b/Homework 1/13/index.html
@@ -11,7 +11,7 @@
         <textarea id="ta1" rows="10" cols="40">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore, reiciendis facilis consequatur qui hic distinctio voluptate numquam quasi error quam ea quae nobis laudantium maiores, quos ex veniam perferendis adipisci.</textarea>
         <br>
         <select name="animals">
-            <option value="cat">Кошка</option>
+            <option value="cat">Кішка</option>
             <option value="dog">Собака</option>
             <option value="mou">Мишка</option>
             <option value="el">Слон</option>
