Rewrote everything in flex

--- a/project1/contacts.html
+++ b/project1/contacts.html
@@ -43,41 +43,34 @@
      ></path>
     </svg>
    </div>
-   <table class="basket">
-    <tr>
-     <th>Продукт</th>
-     <th>Кількість</th>
-     <th>Ціна</th>
-    </tr>
-    <tr>
-     <td>Siemens ME45</td>
-     <td>1</td>
-     <td>150$</td>
-    </tr>
-    <tr>
-     <td>Asus VivoBook 15</td>
-     <td>1</td>
-     <td>1500$</td>
-    </tr>
-    <tr>
-     <td>Arduino Nano V3 AVR</td>
-     <td>1</td>
-     <td>5$</td>
-    </tr>
-    <tr>
-     <td>Xiaomi Redmi 9A</td>
-     <td>1</td>
-     <td>5$</td>
-    </tr>
-    <tr>
-     <th>Усього</th>
-     <th>4</th>
-     <th>2155$</th>
-    </tr>
-   </table>
-   <div class="btn-container-2">
-    <a href="#"><button class="delete">Видалити товар</button></a>
-    <a href="confirm.html"><button class="confirm">Оплата</button></a>
+   <div class="contacts-container">
+    <div class="subscribe">
+     <p>Ми розташовані на вул. Пушкінська 25</p>
+     <div class="social">
+      <p>Підпишіться на нас:</p>
+      <i class="fa-brands fa-facebook"></i>
+      <i class="fa-brands fa-instagram"></i>
+      <i class="fa-brands fa-telegram"></i>
+     </div>
+     <p>
+      Наша електронна адреса: <br /><br />
+      <a href="mailto:" style="color: rgb(248 250 252)"
+       ><b class="link">shoppa@gmail.com</b></a
+      >
+     </p>
+    </div>
+    <form action="" class="letter">
+     <input type="text" placeholder="Ваше ім'я" />
+     <input type="email" placeholder="Ваш email" />
+     <textarea
+      name=""
+      id=""
+      cols="30"
+      rows="10"
+      placeholder="Ваше повідомлення"
+     ></textarea>
+     <button>Відправити</button>
+    </form>
    </div>
    <div class="footer">
     <div class="logo">Shoppa</div>
