--- a/project1/confirm.html
+++ b/project1/confirm.html
@@ -43,42 +43,18 @@
      ></path>
     </svg>
    </div>
-   <table class="basket">
-    <tr>
-     <th>Продукт</th>
-     <th>Кількість</th>
-     <th>Ціна</th>
-    </tr>
-    <tr>
-     <td>Siemens ME45</td>
-     <td>1</td>
-     <td>150$</td>
-    </tr>
-    <tr>
-     <td>Asus VivoBook 15</td>
-     <td>1</td>
-     <td>1500$</td>
-    </tr>
-    <tr>
-     <td>Arduino Nano V3 AVR</td>
-     <td>1</td>
-     <td>5$</td>
-    </tr>
-    <tr>
-     <td>Xiaomi Redmi 9A</td>
-     <td>1</td>
-     <td>5$</td>
-    </tr>
-    <tr>
-     <th>Усього</th>
-     <th>4</th>
-     <th>2155$</th>
-    </tr>
-   </table>
-   <div class="btn-container-2">
-    <a href="#"><button class="delete">Видалити товар</button></a>
-    <a href="confirm.html"><button class="confirm">Оплата</button></a>
-   </div>
+   <form action="" class="confirm-form">
+    <input type="text" placeholder="Прізвище" />
+    <input type="text" placeholder="Ім'я" />
+    <input type="tel" placeholder="Телефон" />
+    <input type="text" placeholder="Адреса" />
+    <div class="card">
+     <input type="text" class="no" placeholder="Номер картки" />
+     <input type="text" class="cvv" placeholder="CVV2" />
+     <input type="password" class="pas" placeholder="Пароль" />
+     <button>Готово</button>
+    </div>
+   </form>
    <div class="footer">
     <div class="logo">Shoppa</div>
     <div style="color: rgb(248 250 252); font-size: 25px">+3809814562</div>
