Added Banner on Main Page

--- a/project1/index.html
+++ b/project1/index.html
@@ -52,6 +52,16 @@
      </button>
     </div>
    </div>
+   <div class="black-friday">
+    <div class="black-friday-text-container">
+     <div class="bf1">BLACK</div>
+     <div class="bf2">FRIDAY</div>
+     <div class="bf3">СУПЕР ЗНИЖКИ</div>
+     <div class="bf4">MacBook Air M1</div>
+     <div class="bf5">ЗА 500$</div>
+    </div>
+    <img src="./img/Mac.png" alt="Macbook" />
+   </div>
 
    <div class="goods-container" style="margin-top: 50px">
     <h1>Хіти продажів</h1>
