--- a/project1/index.html
+++ b/project1/index.html
@@ -28,20 +28,15 @@
      <button class="log-in">Вхід</button>
      <button class="sign-up">Реєстрація</button>
     </div>
-    <svg
-     class="menuicon"
-     fill="none"
-     stroke="currentColor"
-     viewBox="0 0 24 24"
-     xmlns="http://www.w3.org/2000/svg"
-    >
-     <path
-      stroke-linecap="round"
-      stroke-linejoin="round"
-      stroke-width="2"
-      d="M4 6h16M4 12h16M4 18h16"
-     ></path>
-    </svg>
+    <a class="Icons" id="menuBtn" onclick="changeIcon(this)"
+     ><i id="faMenu" class="fa-solid fa-bars fa-xl"></i
+    ></a>
+   </div>
+   <div id="dropdown" class="nav-container-2">
+    <a href="index.html"><button class="menu-button">Головна</button></a>
+    <a href="categories.html"><button class="menu-button">Категорії</button></a>
+    <a href="basket.html"><button class="menu-button">Кошик</button></a>
+    <a href="contacts.html"><button class="menu-button">Контакти</button></a>
    </div>
 
    <div class="wrap">
@@ -152,4 +147,17 @@
    </div>
   </div>
  </body>
+ <script>
+  document.getElementById("dropdown").style.display = "none";
+  function changeIcon(anchor) {
+   var icon = anchor.querySelector("i");
+   icon.classList.toggle("fa-bars");
+   icon.classList.toggle("fa-xmark");
+   if (icon.classList.contains("fa-bars")) {
+    document.getElementById("dropdown").style.display = "none";
+   } else {
+    document.getElementById("dropdown").style.display = "";
+   }
+  }
+ </script>
 </html>
