--- a/project2/millionaire/index.html
+++ b/project2/millionaire/index.html
@@ -14,21 +14,21 @@
    <div class="h-1/2 w-full flex">
     <div class="h-full w-1/6 flex flex-col">
      <div class="w-full h-1/3 p-5">
-      <div
+      <div id="help50"
        class="text-slate-50 w-full h-full text-4xl font-bold text-center cursor-pointer hover:text-slate-300"
       >
        50/50
       </div>
      </div>
      <div class="w-full h-1/3 p-5">
-      <div
+      <div id="helpFriend"
        class="text-slate-50 w-full h-full text-4xl font-bold text-center cursor-pointer hover:text-slate-300"
       >
        Друг
       </div>
      </div>
      <div class="w-full h-1/3 p-5">
-      <div
+      <div id="helpMistake"
        class="text-slate-50 w-full h-full text-4xl font-bold text-center cursor-pointer hover:text-slate-300"
       >
        Помилка
