--- a/project2/millionaire/index.html
+++ b/project2/millionaire/index.html
@@ -134,7 +134,19 @@
    <div id="btnPlus">+</div>
    <div id="btnIs">=</div>
   </div>
+
+  <div id="randomizer">
+   <label for="begN">Початок діапазону:</label>
+   <input type="number" id="begN" />
+   <label for="endN">Кінець діапазону:</label>
+   <input type="number" id="endN" />
+   <label for="numb">Кількість чисел:</label>
+   <input type="number" id="numb" />
+   <input type="button" id="OKbtn" value="OK" />
+   <div id="resRand"></div>
+  </div>
  </body>
  <script type="module" src="./src/game.js"></script>
  <script type="module" src="./src/calculator.js"></script>
+ <script type="module" src="./src/random.js"></script>
 </html>
