--- a/project2/millionaire/index.html
+++ b/project2/millionaire/index.html
@@ -141,7 +141,7 @@
    <label for="endN">Кінець діапазону:</label>
    <input type="number" id="endN" />
    <label for="numb">Кількість чисел:</label>
-   <input type="number" id="numb" />
+   <input type="number" id="numb" value="1" />
    <input type="button" id="OKbtn" value="OK" />
    <div id="resRand"></div>
   </div>
