logic calc fixed

--- a/project2/millionaire/index.html
+++ b/project2/millionaire/index.html
@@ -141,9 +141,9 @@
    <label for="endN">Кінець діапазону:</label>
    <input type="number" id="endN" />
    <label for="numb">Кількість чисел:</label>
-   <input type="number" id="numb" value="1" />
+   <input type="number" id="numb" value="1" min="1" />
    <input type="button" id="OKbtn" value="OK" />
-   <div id="resRand"></div>
+   <textarea id="resRand" style="width: 90%"></textarea>
   </div>
  </body>
  <script type="module" src="./src/game.js"></script>
