calculator fixed everything

--- a/project2/millionaire/index.html
+++ b/project2/millionaire/index.html
@@ -102,7 +102,7 @@
    </div>
   </div>
 
-  <div id="calculator">
+  <div id="calculator" style="width: 530px; font-family: monospace">
    <div
     id="screen"
     style="
@@ -110,8 +110,8 @@
      color: black;
      text-align: right;
      height: 100px;
-     overflow: scroll;
-     overflow-y: hidden;
+     padding-right: 23px;
+     overflow: hidden;
     "
    ></div>
    <div id="btn7">7</div>
