--- a/project2/millionaire/index.html
+++ b/project2/millionaire/index.html
@@ -13,10 +13,10 @@
   >
    <div class="h-1/2 w-full flex">
     <div class="h-full w-1/6 flex flex-col">
-     <div class="w-full h-1/3 p-5">
+     <div id="help50cont" class="w-full h-1/3 p-5">
       <div
        id="help50"
-       class="text-slate-50 w-full h-full text-4xl font-bold text-center cursor-pointer hover:text-slate-300"
+       class="text-slate-50 w-full font-bold text-center cursor-pointer hover:text-slate-300"
       >
        50/50
       </div>
@@ -24,7 +24,7 @@
      <div class="w-full h-1/3 p-5">
       <div
        id="helpFriend"
-       class="text-slate-50 w-full h-full text-4xl font-bold text-center cursor-pointer hover:text-slate-300"
+       class="text-slate-50 w-full font-bold text-center cursor-pointer hover:text-slate-300"
       >
        Друг
       </div>
@@ -32,7 +32,7 @@
      <div class="w-full h-1/3 p-5">
       <div
        id="helpMistake"
-       class="text-slate-50 w-full h-full text-4xl font-bold text-center cursor-pointer hover:text-slate-300"
+       class="text-slate-50 w-full font-bold text-center cursor-pointer hover:text-slate-300"
       >
        Помилка
       </div>
@@ -42,10 +42,14 @@
      <div class="h-1/2 text-slate-50 text-9xl w-full text-center">
       Мільйонер
      </div>
-     <div class="w-full h-1/2 p-5">
+     <div
+      class="w-full h-1/2 p-5"
+      style="background: #4e2e98; border-radius: 30px"
+     >
       <div
        id="question"
-       class="text-yellow-300 w-full h-full text-center text-2xl font-semibold"
+       class="text-yellow-300 w-full h-full text-center font-semibold"
+       style="margin-top: 10px; font-size: 30px"
       ></div>
      </div>
     </div>
@@ -76,27 +80,39 @@
    </div>
    <div class="h-1/2 w-full flex flex-wrap font-bold">
     <div class="w-1/2 h-1/2 p-5">
-     <div class="text-slate-50 w-full h-full flex items-center cursor-pointer">
+     <div
+      id="qAcont"
+      class="text-slate-50 w-full h-full flex items-center cursor-pointer"
+     >
       <div class="text-6xl">A)</div>
-      <div id="qA" class="text-6xl"></div>
+      <div id="qA" class="text-6xl" style="margin-left: 5px"></div>
      </div>
     </div>
     <div class="w-1/2 h-1/2 p-5">
-     <div class="text-slate-50 w-full h-full flex items-center cursor-pointer">
+     <div
+      id="qBcont"
+      class="text-slate-50 w-full h-full flex items-center cursor-pointer"
+     >
       <div class="text-6xl">B)</div>
-      <div id="qB" class="text-6xl"></div>
+      <div id="qB" class="text-6xl" style="margin-left: 5px"></div>
      </div>
     </div>
     <div class="w-1/2 h-1/2 p-5">
-     <div class="text-slate-50 w-full h-full flex items-center cursor-pointer">
+     <div
+      id="qCcont"
+      class="text-slate-50 w-full h-full flex items-center cursor-pointer"
+     >
       <div class="text-6xl">C)</div>
-      <div id="qC" class="text-6xl"></div>
+      <div id="qC" class="text-6xl" style="margin-left: 5px"></div>
      </div>
     </div>
     <div class="w-1/2 h-1/2 p-5">
-     <div class="text-slate-50 w-full h-full flex items-center cursor-pointer">
+     <div
+      id="qDcont"
+      class="text-slate-50 w-full h-full flex items-center cursor-pointer"
+     >
       <div class="text-6xl">D)</div>
-      <div id="qD" class="text-6xl hover:bg-slate-500"></div>
+      <div id="qD" class="text-6xl" style="margin-left: 5px"></div>
      </div>
     </div>
    </div>
