--- a/project2/millionaire/index.html
+++ b/project2/millionaire/index.html
@@ -87,7 +87,7 @@
     <div class="w-1/2 h-1/2 p-5">
      <div
       id="qAcont"
-      class="text-slate-50 w-full h-full flex items-center cursor-pointer"
+      class="text-slate-50 w-full h-full flex items-center cursor-pointer hoverClass1"
      >
       <div class="text-6xl">A)</div>
       <div id="qA" class="text-6xl" style="margin-left: 5px"></div>
@@ -96,7 +96,7 @@
     <div class="w-1/2 h-1/2 p-5">
      <div
       id="qBcont"
-      class="text-slate-50 w-full h-full flex items-center cursor-pointer"
+      class="text-slate-50 w-full h-full flex items-center cursor-pointer hoverClass1"
      >
       <div class="text-6xl">B)</div>
       <div id="qB" class="text-6xl" style="margin-left: 5px"></div>
@@ -105,7 +105,7 @@
     <div class="w-1/2 h-1/2 p-5">
      <div
       id="qCcont"
-      class="text-slate-50 w-full h-full flex items-center cursor-pointer"
+      class="text-slate-50 w-full h-full flex items-center cursor-pointer hoverClass1"
      >
       <div class="text-6xl">C)</div>
       <div id="qC" class="text-6xl" style="margin-left: 5px"></div>
@@ -114,7 +114,7 @@
     <div class="w-1/2 h-1/2 p-5">
      <div
       id="qDcont"
-      class="text-slate-50 w-full h-full flex items-center cursor-pointer"
+      class="text-slate-50 w-full h-full flex items-center cursor-pointer hoverClass1"
      >
       <div class="text-6xl">D)</div>
       <div id="qD" class="text-6xl" style="margin-left: 5px"></div>
